# bjarnes-game-of-life

./: CMakeLists.txt  README.md
src/: board.hpp  main.cpp  printing.hpp
tests/: test_game_of_life_implementation.cpp
